--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -25,7 +25,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and push image
+    - name: Build and push Silverblue image
       uses: docker/build-push-action@v4
       with:
         context: .
@@ -34,3 +34,13 @@ jobs:
         tags: |
           ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
           ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:${{ github.sha }}
+
+    - name: Build and push Kinoite image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./KinoiteContainerfile
+        push: true
+        tags: |
+          ghcr.io/${{ github.repository_owner }}/kinoite-and-red:latest
+          ghcr.io/${{ github.repository_owner }}/kinoite-and-red:${{ github.sha }}
