--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -38,12 +38,12 @@ jobs:
           ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
           ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:${{ github.sha }}
 
-    - name: Build and push Kinoite image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: ./KinoiteContainerfile
-        push: true
-        tags: |
-          ghcr.io/${{ github.repository_owner }}/kinoite-and-red:latest
-          ghcr.io/${{ github.repository_owner }}/kinoite-and-red:${{ github.sha }}
+    # - name: Build and push Kinoite image
+    #   uses: docker/build-push-action@v4
+    #   with:
+    #     context: .
+    #     file: ./KinoiteContainerfile
+    #     push: true
+    #     tags: |
+    #       ghcr.io/${{ github.repository_owner }}/kinoite-and-red:latest
+    #       ghcr.io/${{ github.repository_owner }}/kinoite-and-red:${{ github.sha }}
